syntax="proto3";
option go_package="micromango/pkg/grpc/share";

enum ListName {
  UNKNOWN = 0;
  READING = 1;
  TOREAD = 2;
  COMPLETED = 3;
  DROP =  4;
}

message MangaPreviewResponse {
  string mangaId = 1;
  string title = 2;
  string cover = 3;
  float rate = 4;
}

message Empty {}

message AvgMangaRateResponse {
  float rate = 1;
  uint64 voters = 2;
}

message File {
  bytes file = 1;
  string filename = 2;
}